--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,44 @@
+@font-face {
+    font-display: swap;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 300;
+    src: url('../fonts/poppins-v21-latin-300.eot');
+    src: url('../fonts/poppins-v21-latin-300.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/poppins-v21-latin-300.woff2') format('woff2'),
+        url('../fonts/poppins-v21-latin-300.woff') format('woff'),
+        url('../fonts/poppins-v21-latin-300.ttf') format('truetype'),
+        url('../fonts/poppins-v21-latin-300.svg#Poppins') format('svg');
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/poppins-v21-latin-regular.woff2') format('woff2'),
+        url('../fonts/poppins-v21-latin-regular.woff') format('woff'),
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    src: url('../fonts/poppins-v21-latin-600.woff2') format('woff2'),
+        url('../fonts/poppins-v21-latin-600.woff') format('woff'),
+}
+
+@font-face {
+    font-display: swap;
+
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 900;
+    src: url('../fonts/poppins-v21-latin-900.woff2') format('woff2'),
+        url('../fonts/poppins-v21-latin-900.woff') format('woff'),
+}
+
 :root {
     --color-primary-dark: #31261a;
     --color-primary-light: #faf4ea;
@@ -8,9 +49,16 @@
 /* base */
 body {
     color: var(--color-primary-dark);
+    font-family: 'Poppins', sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 1.5;
 }
 ul {
     list-style-type: none;
+}
+address {
+    font-style: normal;
 }
 
 /* button */
@@ -20,6 +68,7 @@ ul {
     border: 2px solid var(--color-brand-light);
     border-radius: 8px;
     cursor: pointer;
+    font-weight: 600;
 }
 .button:hover {
     color: var(--color-brand-dark);
@@ -29,14 +78,18 @@ ul {
 /* link */
 .link {
     color: var(--color-primary-light);
-
+    text-decoration: none;
 }
 .link:hover {
     color: var(--color-brand-light);
+    font-weight: 600;
 }
 
 /* hero title */
 .hero-title {
+    text-align: center;
+    font-size: 128px;
+    font-weight: 900;
     color: var(--color-primary-light)
 }
 .hero-title .accent {
@@ -48,6 +101,56 @@ ul {
     color: var(--color-primary-light);
     background-color: var(--color-brand-light);
 }
+.section-title {
+    font-size: 64px;
+    font-weight: 900;
+    line-height: 1.3;
+}
 .section-title .accent{
     color: var(--color-brand-dark);
+}
+.advantages-item {
+    font-size: 20px;
+    font-weight: 300;
+
+}
+
+/* tradition section */
+.traditions-text .brand{
+    color: var(--color-brand-light);
+    font-weight: 600;
+}
+.traditions-text .uppercase {
+    text-transform: uppercase;
+}
+
+/* chefs section */
+.chefs-title {
+    font-size: 40px;
+    font-weight: 600;
+}
+
+/* format section */
+.format-title {
+    font-size: 24px;
+    font-weight: 600;
+}
+.format-text {
+    font-size: 14px;
+    font-weight: 300;
+}
+
+/* footer */
+.address-link {
+    color: var(--color-primary-light);
+    font-size: 16px;
+    font-weight: 300;
+    text-decoration: none;
+}
+.address-link:hover {
+    color: var(--color-brand-light);
+}
+.address-copyright {
+    font-weight: 400;
+    color: #a18268;
 }
