--- a/css/styles.css
+++ b/css/styles.css
@@ -1,156 +1,151 @@
 @font-face {
-    font-display: swap;
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 300;
-    src: url('../fonts/poppins-v21-latin-300.eot');
-    src: url('../fonts/poppins-v21-latin-300.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/poppins-v21-latin-300.woff2') format('woff2'),
-        url('../fonts/poppins-v21-latin-300.woff') format('woff'),
-        url('../fonts/poppins-v21-latin-300.ttf') format('truetype'),
-        url('../fonts/poppins-v21-latin-300.svg#Poppins') format('svg');
+  font-display: swap;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 300;
+  src: url('../fonts/poppins-v21-latin-300.woff2') format('woff2'),
+    url('../fonts/poppins-v21-latin-300.woff') format('woff');
 }
 
 @font-face {
-    font-display: swap;
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 400;
-    src: url('../fonts/poppins-v21-latin-regular.woff2') format('woff2'),
-        url('../fonts/poppins-v21-latin-regular.woff') format('woff'),
+  font-display: swap;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/poppins-v21-latin-regular.woff2') format('woff2'),
+    url('../fonts/poppins-v21-latin-regular.woff') format('woff');
 }
 
 @font-face {
-    font-display: swap;
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 600;
-    src: url('../fonts/poppins-v21-latin-600.woff2') format('woff2'),
-        url('../fonts/poppins-v21-latin-600.woff') format('woff'),
+  font-display: swap;
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 600;
+  src: url('../fonts/poppins-v21-latin-600.woff2') format('woff2'),
+    url('../fonts/poppins-v21-latin-600.woff') format('woff');
 }
 
 @font-face {
-    font-display: swap;
+  font-display: swap;
 
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 900;
-    src: url('../fonts/poppins-v21-latin-900.woff2') format('woff2'),
-        url('../fonts/poppins-v21-latin-900.woff') format('woff'),
+  font-family: 'Poppins';
+  font-style: normal;
+  font-weight: 900;
+  src: url('../fonts/poppins-v21-latin-900.woff2') format('woff2'),
+    url('../fonts/poppins-v21-latin-900.woff') format('woff');
 }
 
 :root {
-    --color-primary-dark: #31261a;
-    --color-primary-light: #faf4ea;
-    --color-brand-dark: #465929;
-    --color-brand-light: #819B57;
+  --color-primary-dark: #31261a;
+  --color-primary-light: #faf4ea;
+  --color-brand-dark: #465929;
+  --color-brand-light: #819b57;
 }
 
 /* base */
 body {
-    color: var(--color-primary-dark);
-    font-family: 'Poppins', sans-serif;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 1.5;
+  color: var(--color-primary-dark);
+  font-family: 'Poppins', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.5;
 }
 ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 address {
-    font-style: normal;
+  font-style: normal;
 }
 
 /* button */
 .button {
-    color: var(--color-primary-light);
-    background-color: var(--color-brand-light);
-    border: 2px solid var(--color-brand-light);
-    border-radius: 8px;
-    cursor: pointer;
-    font-weight: 600;
+  color: var(--color-primary-light);
+  background-color: var(--color-brand-light);
+  border: 2px solid var(--color-brand-light);
+  border-radius: 8px;
+  cursor: pointer;
+  font-weight: 600;
 }
 .button:hover {
-    color: var(--color-brand-dark);
-    background-color: transparent;
+  color: var(--color-brand-dark);
+  background-color: transparent;
 }
 
 /* link */
 .link {
-    color: var(--color-primary-light);
-    text-decoration: none;
+  color: var(--color-primary-light);
+  text-decoration: none;
 }
 .link:hover {
-    color: var(--color-brand-light);
-    font-weight: 600;
+  color: var(--color-brand-light);
+  font-weight: 600;
 }
 
 /* hero title */
 .hero-title {
-    text-align: center;
-    font-size: 128px;
-    font-weight: 900;
-    color: var(--color-primary-light)
+  text-align: center;
+  font-size: 128px;
+  font-weight: 900;
+  color: var(--color-primary-light);
 }
 .hero-title .accent {
-    color: var(--color-brand-light)
+  color: var(--color-brand-light);
 }
 
 /* advantages section */
 .advantages-list {
-    color: var(--color-primary-light);
-    background-color: var(--color-brand-light);
+  color: var(--color-primary-light);
+  background-color: var(--color-brand-light);
 }
 .section-title {
-    font-size: 64px;
-    font-weight: 900;
-    line-height: 1.3;
+  font-size: 64px;
+  font-weight: 900;
+  line-height: 1.3;
 }
-.section-title .accent{
-    color: var(--color-brand-dark);
+.section-title .accent {
+  color: var(--color-brand-dark);
 }
 .advantages-item {
-    font-size: 20px;
-    font-weight: 300;
-
+  font-size: 20px;
+  font-weight: 300;
 }
 
 /* tradition section */
-.traditions-text .brand{
-    color: var(--color-brand-light);
-    font-weight: 600;
+.traditions-text .brand {
+  color: var(--color-brand-light);
+  font-weight: 600;
 }
 .traditions-text .uppercase {
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
 
 /* chefs section */
 .chefs-title {
-    font-size: 40px;
-    font-weight: 600;
+  font-size: 40px;
+  font-weight: 600;
 }
 
 /* format section */
 .format-title {
-    font-size: 24px;
-    font-weight: 600;
+  font-size: 24px;
+  font-weight: 600;
 }
 .format-text {
-    font-size: 14px;
-    font-weight: 300;
+  font-size: 14px;
+  font-weight: 300;
 }
 
 /* footer */
 .address-link {
-    color: var(--color-primary-light);
-    font-size: 16px;
-    font-weight: 300;
-    text-decoration: none;
+  color: var(--color-primary-light);
+  font-size: 16px;
+  font-weight: 300;
+  text-decoration: none;
 }
 .address-link:hover {
-    color: var(--color-brand-light);
+  color: var(--color-brand-light);
 }
 .address-copyright {
-    font-weight: 400;
-    color: #a18268;
+  font-weight: 400;
+  color: #a18268;
 }
