--- a/css/styles.css
+++ b/css/styles.css
@@ -43,12 +43,25 @@
 }
 
 /* base */
+* {
+  box-sizing: border-box;
+}
 body {
   color: var(--color-primary-dark);
   font-family: 'Poppins', sans-serif;
   font-size: 18px;
   font-weight: 400;
   line-height: 1.5;
+  margin: 0;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin-top: 0;
 }
 ul {
   list-style-type: none;
@@ -56,9 +69,27 @@ ul {
 address {
   font-style: normal;
 }
+.section {
+  padding: 48px 0px;
+}
+.visualy-hidden {
+  position: absolute;
+  left: -10000px;
+  top: auto;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+}
+.container {
+  width: 100%;
+  max-width: 1288px;
+  margin: 0 auto;
+  padding: 0px 24px;
+}
 
 /* button */
 .button {
+  padding: 16px 32px;
   color: var(--color-primary-light);
   background-color: var(--color-brand-light);
   border: 2px solid var(--color-brand-light);
@@ -81,8 +112,12 @@ address {
   font-weight: 600;
 }
 
-/* hero title */
+/* hero section */
+.hero-section {
+  padding: 272px 0px;
+}
 .hero-title {
+  margin-bottom: 0;
   text-align: center;
   font-size: 128px;
   font-weight: 900;
@@ -118,21 +153,40 @@ address {
 .traditions-text .uppercase {
   text-transform: uppercase;
 }
+.traditions-section {
+  padding-top: 96px;
+}
+.tradition-title {
+  margin-bottom: 42px;
+}
 
 /* chefs section */
 .chefs-title {
+  margin-bottom: 80px;
+}
+.chef-title {
+  margin-bottom: 16px;
   font-size: 40px;
   font-weight: 600;
 }
 
 /* format section */
+.formats-title {
+  margin-bottom: 80px;
+}
 .format-title {
+  margin-bottom: 16px;
   font-size: 24px;
   font-weight: 600;
 }
 .format-text {
   font-size: 14px;
   font-weight: 300;
+}
+
+/* contact section */
+.contacts-title {
+  margin-bottom: 16px;
 }
 
 /* footer */
