--- a/css/styles.css
+++ b/css/styles.css
@@ -38,8 +38,10 @@
 :root {
   --color-primary-dark: #31261a;
   --color-primary-light: #faf4ea;
+  --color-secondary-dark: #a18268;
   --color-brand-dark: #465929;
-  --color-brand-light: #819b57;
+  --color-brand-normal: #819b57;
+  --color-brand-light: #cfcfbc;
 }
 
 /* base */
@@ -48,6 +50,7 @@
 }
 body {
   color: var(--color-primary-dark);
+  background-color: var(--color-primary-light);
   font-family: 'Poppins', sans-serif;
   font-size: 18px;
   font-weight: 400;
@@ -93,8 +96,8 @@ address {
 .button {
   padding: 16px 32px;
   color: var(--color-primary-light);
-  background-color: var(--color-brand-light);
-  border: 2px solid var(--color-brand-light);
+  background-color: var(--color-brand-normal);
+  border: 2px solid var(--color-brand-normal);
   border-radius: 8px;
   cursor: pointer;
   font-weight: 600;
@@ -110,7 +113,7 @@ address {
   text-decoration: none;
 }
 .link:hover {
-  color: var(--color-brand-light);
+  color: var(--color-brand-normal);
   /* font-weight: 600; */
 }
 
@@ -137,6 +140,10 @@ header {
 }
 /* hero section */
 .hero-section {
+  background-image: url('../images/hero-section-background.jpg');
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-size: cover;
   padding: 272px 0px;
 }
 .hero-title {
@@ -147,12 +154,12 @@ header {
   color: var(--color-primary-light);
 }
 .hero-title .accent {
-  color: var(--color-brand-light);
+  color: var(--color-brand-normal);
 }
 
 /* advantages section */
 .advantages-section {
-  background-color: var(--color-brand-light);
+  background-color: var(--color-brand-normal);
   padding: 16px 0px;
 }
 .advantages-list {
@@ -165,6 +172,9 @@ header {
   font-weight: 900;
   line-height: 1.3;
 }
+.section-title.centered {
+  text-align: center;
+}
 .section-title .accent {
   color: var(--color-brand-dark);
 }
@@ -176,7 +186,7 @@ header {
 
 /* tradition section */
 .traditions-text .brand {
-  color: var(--color-brand-light);
+  color: var(--color-brand-normal);
   font-weight: 600;
 }
 .traditions-text .uppercase {
@@ -202,12 +212,25 @@ header {
 
 /* chefs section */
 .chefs-title {
-  margin-bottom: 80px;
+  max-width: 540px;
+  margin: 0 auto 80px;
+}
+.chefs-title::before,
+.chefs-title::after {
+  display: block;
+  width: 352px;
+  border: 2px solid var(--color-brand-light);
+  content: '';
 }
 .chef-title {
   margin-bottom: 16px;
   font-size: 40px;
   font-weight: 600;
+}
+.chef-photo {
+  border-radius: 4px 4px 4px 200px;
+  box-shadow: -16px 16px 0 0 var(--color-primary-light),
+    -16px 16px 0 2px var(--color-secondary-dark);
 }
 
 /* format section */
@@ -224,8 +247,15 @@ header {
   font-weight: 300;
 }
 .format-card {
+  height: 444px;
   border: 1px solid lightgray; /*remove*/
   border-radius: 16px;
+  background-image: linear-gradient(
+    180deg,
+    rgba(49, 38, 26, 0) 55.21%,
+    rgba(49, 38, 26, 0.71) 72.92%,
+    var(--color-primary-dark) 100%
+  );
   padding: 24px;
 }
 .formats-list {
@@ -242,6 +272,13 @@ header {
 }
 
 /* footer */
+.footer {
+  background-color: var(--color-primary-dark);
+  background-image: url('../images/footer-background.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
 .address-link {
   color: var(--color-primary-light);
   font-size: 16px;
@@ -249,7 +286,7 @@ header {
   text-decoration: none;
 }
 .address-link:hover {
-  color: var(--color-brand-light);
+  color: var(--color-brand-normal);
 }
 .address-copyright {
   font-weight: 400;
