--- a/css/styles.css
+++ b/css/styles.css
@@ -116,6 +116,7 @@ address {
 .link {
   color: var(--color-primary-light);
   text-decoration: none;
+  transition: color 0.3s;
 }
 .link:hover {
   color: var(--color-brand-normal);
@@ -124,7 +125,11 @@ address {
 
 /* header */
 header {
-  background-color: lightgray;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding-top: 32px;
 }
 .header-container {
   display: flex;
@@ -145,7 +150,13 @@ header {
 }
 /* hero section */
 .hero-section {
-  background-image: url('../images/hero-section-background.jpg');
+  background-image: linear-gradient(
+      102.76deg,
+      rgba(18, 18, 17, 0.78) 2.03%,
+      rgba(18, 18, 17, 0.6) 58.46%,
+      rgba(18, 18, 17, 0) 90.36%
+    ),
+    url('../images/hero-section-background.jpg');
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
@@ -217,15 +228,23 @@ header {
 
 /* chefs section */
 .chefs-title {
-  max-width: 540px;
+  position: relative;
   margin: 0 auto 80px;
 }
 .chefs-title::before,
 .chefs-title::after {
   display: block;
+  position: absolute;
+  bottom: 24px;
   width: 352px;
   border: 2px solid var(--color-brand-light);
   content: '';
+}
+.chefs-title::before {
+  left: 0;
+}
+.chefs-title::after {
+  right: 0;
 }
 .chefs-list {
   display: flex;
@@ -285,6 +304,10 @@ header {
     var(--color-primary-dark) 100%
   );
   padding: 24px;
+  transition: transform 0.3s;
+}
+.format-card:hover {
+  transform: scale(1.05);
 }
 .formats-list {
   display: flex;
@@ -309,7 +332,9 @@ header {
   border: 1px solid var(--color-primary-dark);
   cursor: pointer;
 }
-
+.carusel-button.next {
+  transform: rotate(180deg);
+}
 .carusel-button:hover {
   background-color: var(--color-primary-dark);
   fill: var(--color-primary-light);
@@ -334,12 +359,32 @@ header {
 
 /* footer */
 .footer {
-  padding: 32px;
+  position: relative;
+  padding: 32px 0px;
   background-color: var(--color-primary-dark);
   background-image: url('../images/footer-background.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+}
+.footer::before,
+.footer::after {
+  position: absolute;
+  bottom: 0;
+  background-repeat: no-repeat;
+  content: '';
+}
+footer::before {
+  left: 0;
+  width: 180px;
+  height: 120px;
+  background-image: url('../images/decor-bread-small.png');
+}
+footer::after {
+  right: 0;
+  width: 380px;
+  height: 190px;
+  background-image: url('../images/decor-bread-large.png');
 }
 .footer-container {
   display: flex;
@@ -375,4 +420,38 @@ header {
 .address-copyright {
   font-weight: 400;
   color: #a18268;
+}
+
+/* modal */
+.backdrop {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 20px 0px;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  background-color: rgb(0, 0, 0, 0.5);
+  transition: opacity 0.3s, visibility 0.3s;
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+.modal {
+  position: relative;
+  width: 100%;
+  max-width: 880px;
+  height: 100%;
+  max-height: 880px;
+  background-color: var(--color-primary-light);
+  border-radius: 32px;
+}
+.modal-btn-close {
+  position: absolute;
+  top: 40px;
+  right: 40px;
 }
