--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,6 +22,7 @@
 @import './layouts/form-terms';
 @import './layouts/header';
 @import './layouts/hero-section';
+@import './layouts/mobile-menu';
 @import './layouts/modal';
 @import './layouts/section';
 @import './layouts/tradition-section';
