--- a/scss/layouts/_hero-section.scss
+++ b/scss/layouts/_hero-section.scss
@@ -1,21 +1,48 @@
 .hero-section {
-  background-image: linear-gradient(
-      102.76deg,
+  padding: 124px 0px;
+  background-image: linear-gradient(102.76deg,
       rgba(18, 18, 17, 0.78) 2.03%,
       rgba(18, 18, 17, 0.6) 58.46%,
-      rgba(18, 18, 17, 0) 90.36%
-    ),
+      rgba(18, 18, 17, 0) 90.36%),
     url('../images/hero-section-background.jpg');
   background-repeat: no-repeat;
   background-position: center top;
   background-size: cover;
-  padding: 272px 0px;
+
+  @media screen and (min-width: $bp-desktop) {
+    padding: 272px 0px;
+  }
+
+  @media screen and (min-device-pixel-retio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+    background-image: linear-gradient(102.76deg,
+        rgba(18, 18, 17, 0.78) 2.03%,
+        rgba(18, 18, 17, 0.6) 58.46%,
+        rgba(18, 18, 17, 0) 90.36%),
+      url('../images/hero-section-background@2x.jpg');
+  }
 
   &__title {
-    margin-bottom: 0;
-    text-align: center;
-    font-size: 128px;
-    font-weight: 900;
+    margin-bottom: 48px;
     color: var(--color-primary-light);
+    text-align: center;
+    font-size: 67px;
+    line-height: 1;
+    font-weight: 900;
+
+    @media screen and (min-width: $bp-desktop) {
+      margin-bottom: 0;
+      font-size: 128px;
+      line-height: 1.5;
+    }
+  }
+
+  &__button {
+    margin: 0 auto;
+
+    @media screen and (min-width: $bp-desktop) {
+      display: none;
+    }
   }
 }
