--- a/scss/layouts/_tradition-section.scss
+++ b/scss/layouts/_tradition-section.scss
@@ -1,10 +1,15 @@
 .traditions-section {
-  padding-top: 96px;
+  padding-top: 40px;
+
+  @media screen and (min-width: $bp-tablet) {
+    padding-top: 96px;
+  }
 
   &__container {
     display: flex;
     gap: 40px;
     justify-content: space-between;
+    align-items: flex-start;
   }
 
   &__content {
@@ -20,4 +25,14 @@
       max-width: 340px;
     }
   }
+
+  &__image {
+    display: none;
+    border-radius: 400px 400px 0 0;
+
+    @media screen and (min-width: $bp-tablet) {
+      display: block;
+    }
+  }
+
 }
