update to module#19

--- a/scss/components/_carusel.scss
+++ b/scss/components/_carusel.scss
@@ -11,13 +11,13 @@
   border-radius: 50%;
   border: 1px solid var(--color-primary-dark);
   cursor: pointer;
-}
 
-.carusel-button.next {
-  transform: rotate(180deg);
-}
+  &.next {
+    transform: rotate(180deg);
+  }
 
-.carusel-button:hover {
-  background-color: var(--color-primary-dark);
-  fill: var(--color-primary-light);
+  &:hover {
+    background-color: var(--color-primary-dark);
+    fill: var(--color-primary-light);
+  }
 }
