--- a/scss/layouts/_chefs-section.scss
+++ b/scss/layouts/_chefs-section.scss
@@ -1,15 +1,24 @@
 .chefs-section {
   &__title {
     position: relative;
-    margin: 0 auto 80px;
+    margin: 0 auto 24px;
+
+    @media screen and (min-width: $bp-desktop) {
+      margin-bottom: 80px;
+    }
+
     &::before,
     &::after {
-      display: block;
+      display: none;
       position: absolute;
       bottom: 24px;
       width: 352px;
       border: 2px solid var(--color-brand-light);
       content: '';
+
+      @media screen and (min-width: $bp-desktop) {
+        display: block;
+      }
     }
 
     &::before {
@@ -23,11 +32,20 @@
 
   &__list {
     display: flex;
-    gap: 40px 30px;
+    flex-direction: column;
+    gap: 20px;
     flex-wrap: wrap;
+
+    @media screen and (min-width: $bp-tablet) {
+      flex-direction: row;
+      gap: 40px 30px;
+    }
   }
 
   &__item {
-    flex-basis: calc((100% - 30px) / 2);
+
+    @media screen and (min-width: $bp-tablet) {
+      flex-basis: calc((100% - 30px) / 2);
+    }
   }
 }
