--- a/scss/layouts/_contact-section.scss
+++ b/scss/layouts/_contact-section.scss
@@ -3,7 +3,13 @@
 
   &__container {
     display: flex;
-    gap: 32px;
+    flex-direction: column;
+    gap: 24px;
+
+    @media screen and (min-width: $bp-tablet) {
+      flex-direction: row;
+      gap: 32px;
+    }
   }
 
   &__title {
@@ -22,10 +28,20 @@
 
   &__map {
     flex-shrink: 0;
-    border: none;
+    height: 176px;
+    margin: 0 -24px;
     border-radius: 16px;
-    width: 100%;
-    max-width: 605px;
-    height: 595px;
+    border: none;
+
+    @media screen and (min-width: $bp-tablet) {
+      margin: auto;
+      width: 320px;
+      height: 500px;
+    }
+
+    @media screen and (min-width: $bp-desktop) {
+      width: 600px;
+      height: 595px;
+    }
   }
 }
