--- a/scss/layouts/_format-section.scss
+++ b/scss/layouts/_format-section.scss
@@ -1,16 +1,23 @@
 .formats-section {
-  &__container {
+  &__slider {
     display: flex;
-    gap: 32px;
     align-items: center;
+    gap: 32px;
+  }
+
+  &__container {
+    overflow: hidden;
   }
 
   &__list {
-    display: flex;
-    gap: 20px;
+    margin-bottom: 32px;
   }
 
-  &__item {
-    flex-basis: calc((100% - 40px) / 3);
+  &__button {
+    display: none;
+
+    @media screen and (min-width: $bp-tablet) {
+      display: flex;
+    }
   }
 }
