--- a/scss/layouts/_footer.scss
+++ b/scss/layouts/_footer.scss
@@ -1,74 +1,124 @@
 .footer {
-  position: relative;
   padding: 32px 0px;
+  position: relative;
   background-color: var(--color-primary-dark);
   background-image: url('../images/footer-background.png');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-}
 
-.footer::before,
-.footer::after {
-  position: absolute;
-  bottom: 0;
-  background-repeat: no-repeat;
-  content: '';
-}
+  &__container {
+    display: flex;
+    flex-direction: column;
 
-footer::before {
-  left: 0;
-  width: 180px;
-  height: 120px;
-  background-image: url('../images/decor-bread-small.png');
-}
+    @media screen and (min-width: $bp-tablet) {
+      flex-direction: row;
+      gap: 20px;
+    }
+  }
 
-footer::after {
-  right: 0;
-  width: 380px;
-  height: 190px;
-  background-image: url('../images/decor-bread-large.png');
-}
+  &__nav,
+  &__address {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
 
-.footer-container {
-  display: flex;
-  gap: 20px;
-}
+    @media screen and (min-width: $bp-tablet) {
+      flex-direction: row;
+      flex-basis: 50%;
+      text-align: left;
+      gap: 20px;
+    }
+  }
 
-.footer-nav,
-.footer-address {
-  display: flex;
-  flex-basis: 50%;
-  gap: 20px;
-}
+  &__logo,
+  &__menu {
+    flex-grow: 1;
+  }
 
-.footer-logo,
-.footer-menu,
-.address-list,
-.address-info {
-  flex-grow: 1;
-}
+  &__logo {
+    padding-bottom: 32px;
 
-.address-link {
-  color: var(--color-primary-light);
-  font-size: 16px;
-  font-weight: 300;
-  text-decoration: none;
-}
+    @media screen and (min-width: $bp-tablet) {
+      padding-bottom: 0;
+    }
+  }
 
-.address-link:hover {
-  color: var(--color-brand-normal);
-}
+  &__link {
+    margin-bottom: 18px;
 
-.address-icon {
-  fill: var(--color-primary-light);
-}
+    @media screen and (min-width: $bp-tablet) {
+      margin-bottom: 16px;
+    }
+  }
 
-.address-icon:hover {
-  fill: var(--color-brand-normal);
-}
+  &__social {
+    display: flex;
+    gap: 22px;
+    justify-content: center;
+    margin-bottom: 8px;
 
-.address-copyright {
-  font-weight: 400;
-  color: #a18268;
+    @media screen and (min-width: $bp-tablet) {
+      justify-content: start;
+      margin-bottom: 8px;
+    }
+  }
+
+  &::before,
+  &::after {
+    position: absolute;
+    bottom: 0;
+    background-repeat: no-repeat;
+    content: '';
+  }
+
+  &::before {
+    width: 180px;
+    height: 120px;
+    left: 0;
+    background-image: url('../images/decor-bread-small.png');
+  }
+
+  &::after {
+    width: 380px;
+    height: 190px;
+    right: 0;
+    background-image: url('../images/decor-bread-large.png');
+  }
+
+  &__address-list,
+  &__address-info {
+    flex-grow: 1;
+  }
+
+  &__address-link {
+    color: var(--color-primary-light);
+    font-size: 16px;
+    font-weight: 300;
+    text-decoration: none;
+  }
+
+  &__address-link:hover {
+    color: var(--color-brand-normal);
+  }
+
+  &__address-icon {
+    fill: var(--color-primary-light);
+  }
+
+  &__address-icon:hover {
+    fill: var(--color-brand-normal);
+  }
+
+  &__address-copyright {
+    font-weight: 400;
+    font-size: 12px;
+    color: #a18268;
+    padding-top: 8px;
+
+    @media screen and (min-width: $bp-tablet) {
+      padding-top: 16px;
+      font-size: 14px;
+    }
+  }
 }
