--- a/scss/layouts/_modal.scss
+++ b/scss/layouts/_modal.scss
@@ -4,12 +4,14 @@
   right: 0;
   bottom: 0;
   left: 0;
-  padding: 20px 0px;
+  padding: 20px;
   display: flex;
   align-content: center;
   justify-content: center;
   background-color: rgb(0, 0, 0, 0.5);
   transition: opacity 0.3s, visibility 0.3s;
+
+
 
   &.is-hidden {
     opacity: 0;
@@ -24,15 +26,41 @@
   max-width: 880px;
   height: 100%;
   max-height: 880px;
-  padding: 128px;
+  padding: 48px;
   background-color: var(--color-primary-light);
   border-radius: 32px;
   overflow-y: auto;
 
+  @media screen and (min-width: $bp-tablet) {
+    padding: 128px;
+  }
+
   &__btn-close {
+    width: 18px;
+    height: 18px;
     position: absolute;
     top: 40px;
     right: 40px;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+
+    &::before,
+    &::after {
+      content: '';
+      position: absolute;
+      width: 20px;
+      height: 2px;
+      background-color: var(--color-primary-dark);
+    }
+
+    &::before {
+      transform: translate(-50%, -50%) rotate(45deg);
+    }
+
+    &::after {
+      transform: translate(-50%, -50%) rotate(-45deg);
+    }
   }
 
   &__form-field {
