--- a/scss/layouts/_contact-section.scss
+++ b/scss/layouts/_contact-section.scss
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     gap: 24px;
+    width: 101%;
 
     @media screen and (min-width: $bp-tablet) {
       flex-direction: row;
@@ -14,7 +15,15 @@
 
   &__title {
     margin-bottom: 16px;
-    width: 616px;
+  }
+
+  &__description {
+    font-size: 16px;
+    color: var(--color-brand-dark);
+
+    @media screen and (min-width: $bp-tablet) {
+      font-size: 18px;
+    }
   }
 
   &__form-field {
